refacto des tests des services